--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,14 @@ justify-content: space-around;
     margin: 1.5rem;
 }
 
+.separate-result,.from-total{
+    font-weight: 700;
+    color: hsl(224, 30%, 27%);
+}
+.from-total{
+    color: hsl(224, 30%, 27%,.5);
+}
+
 .left-right-container, button{
     background: blueviolet;
 color: white;
